k8s/services/shopping-web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-web
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-web
  template:
    metadata:
      labels:
        app: shopping-web
    spec:
      containers:
        - name: shopping-web
          image: ghanem22/shopping-web:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 80
