k8s/services/shopping-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-web
  namespace: ecommerce
spec:
  selector:
    app: shopping-web
  ports:
    - port: 80
      targetPort: 80
